# budgetTrackerAPI

./: db.sqlite3  pyproject.toml
mysite/: settings.py  urls.py
tracker/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
tracker/migrations/: 0001_initial.py  0002_income.py  0003_transaction_remove_income_account_balance_and_more.py  0004_category_user.py  0005_alter_category_user.py  0006_alter_category_user.py
